objects/LLC_BI__Review_Account__c.object
<CustomObject>
    <description>The list of accounts that were included in the Review.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to lookup to the account records that should be included in the review. This is automatically populated when the review is initiated, loans are selected for review based on the entity involvement of those loans. This field are not editable on the review record however are used in populating the &quot;Loans&quot; and &quot;Relationship&quot; list sections of the review record.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Review Accounts</relationshipLabel>
        <relationshipName>Review_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Data__c</fullName>
        <description>This field auto-populates with configurable data when the review is approved. The data is stored in JSON format.</description>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Review__c</fullName>
        <description>This field is the master- detail, used to specify the review record the accounts should be visible on. This field is automatically populated when a review is initiated for the loans based on the entity involvement of those loans. This field is not editable on the review record ,however it is used in populating the &quot;Loans&quot; and &quot;Relationship&quot; list sections of the review record.</description>
        <label>Review</label>
        <referenceTo>LLC_BI__Review__c</referenceTo>
        <relationshipLabel>Review Accounts</relationshipLabel>
        <relationshipName>Review_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Review Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>